[gd_scene load_steps=12 format=3 uid="uid://4l8vqt7tk3qj"]

[ext_resource type="Script" path="res://components/menu/scores.gd" id="1_gxc4c"]
[ext_resource type="Texture2D" uid="uid://mdqfxy13fgv3" path="res://sprites/ui/nine_path_9.png" id="1_rb33r"]
[ext_resource type="Theme" uid="uid://cmqaxsejj61g2" path="res://themes/Buttons.tres" id="2_v1k35"]
[ext_resource type="FontFile" uid="uid://8n7eoa5gi3en" path="res://fonts/pansyhand.ttf" id="3_tssab"]
[ext_resource type="Texture2D" uid="uid://tmqdr1q8s2a2" path="res://sprites/ui/nine_path_10.png" id="4_73jc5"]
[ext_resource type="Texture2D" uid="uid://dh5vseyovgbei" path="res://sprites/objects/goldCup.png" id="5_ewxmt"]
[ext_resource type="FontFile" uid="uid://b2eo3bo5eljsj" path="res://fonts/Pixelme.ttf" id="5_xl8pi"]
[ext_resource type="Texture2D" uid="uid://fahrd2tfq0ec" path="res://sprites/ui/nine_path_3.png" id="11_5tv1o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlpre"]
bg_color = Color(0, 0, 0, 0.254902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1flko"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydfjb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="scores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxc4c")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rlpre")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="Container" type="NinePatchRect" parent="PanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_rb33r")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 25)
layout_mode = 2
theme_override_constants/separation = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_v1k35")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("3_tssab")
theme_override_font_sizes/font_size = 18
text = "MI PUNTUACIÃ“N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_v1k35")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("3_tssab")
theme_override_font_sizes/font_size = 18
text = "MI AULA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MyPointsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="pointContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer"]
layout_mode = 2
texture = ExtResource("4_73jc5")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(14, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_1flko")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
texture = ExtResource("5_ewxmt")
expand_mode = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_xl8pi")
theme_override_font_sizes/font_size = 8
text = "Programacion Basica 1"
vertical_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ydfjb")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MyPointsContainer/MarginContainer/ScrollContainer/VBoxContainer/pointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_xl8pi")
theme_override_font_sizes/font_size = 8
text = "112 Pts"
vertical_alignment = 2

[node name="MyClassPoints" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="userPointContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer"]
layout_mode = 2
texture = ExtResource("11_5tv1o")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer/MarginContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.509804)
theme_override_fonts/font = ExtResource("5_xl8pi")
theme_override_font_sizes/font_size = 16
text = "1"
vertical_alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_xl8pi")
theme_override_font_sizes/font_size = 8
text = "Ezequiel"
vertical_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ydfjb")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MyClassPoints/MarginContainer/ScrollContainer/VBoxContainer/userPointContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_xl8pi")
theme_override_font_sizes/font_size = 8
text = "150 Pts"
vertical_alignment = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer/Button" to="." method="_on_my_points_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/PanelContainer2/Button" to="." method="_on_class_points_pressed"]
